@@ -43,9 +43,15 @@
     "window_queue_title": "Downloadwarteschlange",
     "window_queue_table_num": "Num",
     "window_queue_table_game": "Spiel",
+    "window_queue_table_titleid": "TitleID",
     "window_queue_table_ver": "Version",
     "window_queue_table_size": "Dateigröße",
     "window_queue_download_btn": "Herunterladen",
+    "window_queue_close_btn": "Schließen",
+    "window_queue_moveup_btn": "Nach Oben",
+    "window_queue_movedown_btn": "Nach Unten",
+    "window_queue_remove_btn": "Löschen",
+    "window_queue_totalsize_label": "Gesamtgröße: {0}",
     
     "msg_configFileLoaded": "Konfigurationsdatei geladen!",
     "msg_noConfigFile": "Keine Konfigurationsdatei gefunden! Benutze Vorgaben!",
