@@ -43,9 +43,15 @@
     "window_queue_title": "Download queue",
     "window_queue_table_num": "Num",
     "window_queue_table_game": "Game",
+    "window_queue_table_titleid": "TitleID",
     "window_queue_table_ver": "Version",
     "window_queue_table_size": "Filesize",
     "window_queue_download_btn": "Start Download",
+    "window_queue_close_btn": "Close",
+    "window_queue_moveup_btn": "Move Up",
+    "window_queue_movedown_btn": "Move Down",
+    "window_queue_remove_btn": "Remove",
+    "window_queue_totalsize_label": "Total Size: {0}",
     
     "msg_configFileLoaded": "Loaded configuration file!",
     "msg_noConfigFile": "No configuration file found! Using defaults!",
